--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -5,6 +5,20 @@
   src: url(fonts/rockweb.ttf) format("truetype");
 }
 
+@font-face {
+  font-family: "Roboto Slab";
+  font-weight: normal;
+  font-style: normal;
+  src: url(fonts/RobotoSlab-Regular.ttf) format("truetype");
+}
+
+@font-face {
+  font-family: "Roboto Slab";
+  font-weight: bold;
+  font-style: normal;
+  src: url(fonts/RobotoSlab-Bold.ttf) format("truetype");
+}
+
 @tailwind base;
 
 @tailwind components;
